# high-x-parton-pdf-inference

./: .gitignore  DataSpacePlot.ipynb  Dockerfile  Manifest.toml  PDF-fit-dirichlet.ipynb  PDF-fit-test-Dirichlet.ipynb  Project.toml  plots_for_paper.ipynb
.github/workflows/: publish.yml
arXiv_2209_06571/: GoF-Dirichlet.ipynb  Manifest.toml  PDF-fit-dirichlet-Kq-newfit.ipynb  PDF-fit-dirichlet.ipynb  PDF-fit-test-Dirichlet.ipynb  Project.toml
arXiv_2209_06571/data/: report-sysrun-priors-tight.txt  simulation-Dirichlet-Syst.h5
v2/: do.sh  do_1.sh  dofigures.sh  dofigures_t.sh  dofigures_x.sh  dofits.sh  doinstall.sh  dopseudodata.sh  doslurm.sh  dox.sh  rename.sh
v2/CABCHSV/: CABCHSV.info
v2/CABCHSV2023nnlo/: CABCHSV2023nnlo.info
v2/TOP/: CMakeLists.txt  README.md
v2/TOP/cmake/Modules/: FindLHAPDF.cmake
v2/TOP/share/: top++best-TEV-pdfvar-CABCHSV2023nnlo.cfg  top++best-TEV-pdfvar-MSTW2008nlo68cl.cfg
v2/TOP/top++2.0/: FixedOrder.cpp  FixedOrder.h  Makefile  PartonicFlux.cpp  PartonicFlux.h  Resummation.cpp  Resummation.h  SubtrFlux.cpp  SubtrFlux.h  Utilities.cpp  Utilities.h  lgamma.cpp  lgamma.h  pdf.cfg  psin.cpp  psin.h  top++.cfg  top++.cpp
v2/TOP/top++2.0/examples-2.0/: top++best-precision.cfg  top++complete-set.cfg
v2/TOP/top++2.0/examples-2.0/Specific_Examples/: Ex2_top++best-TEV.cfg  Ex3_top++pdfvar-best-LHC7.cfg  Ex4_top++NNLO-LHC14.cfg  Ex5_top++as3-LHC7.cfg  Ex6_top++NNLO-LL-LHC8.cfg  Ex7_top++mass-loop-TEV.cfg
v2/containers/: MPP-julia-fedora37-x86_64-v1.def  MPP-julia-fedora39-x86_64-v1.def
v2/fitresults/: fit-Bernstein-0-45-simulation-Bernstein-42.h5
v2/pseudodata/: simulation-Bernstein-42.h5  simulation-Dirichlet-42.h5  simulation-Dirichlet-43.h5  simulation-Valence-42.h5  simulation-Valence-43.h5
